2018-07-14  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_get_optimizable_parameters.m: Return [] for discrete cov structures

	* param/classes/stk_get_optimizable_parameters.m: Return [] if
	param describes a discrete covariance structure.

	New function(s) to get the variance of the observations

	* core/@stk_model_gpposterior/stk_get_observation_variances.m:
	Return the variance of the observation for a posterior model.
	* core/stk_get_observation_variances.m: Same thing for a prior
	model, at a given set of locations.
	* core/@stk_model_gpposterior/stk_predict_leaveoneout.m: Use the
	new function.
	* core/@stk_model_gpposterior/stk_predict_leaveoneout_direct.m: Idem.
	* core/@struct/stk_replicate_obs_noise.m: Idem.

	assert_struct_is_model.m: Fix error identifier

	* core/@struct/private/assert_struct_is_model.m: Fix error
	identifier.

	New (internal) function to simulate noise sample replicates

	* core/@struct/stk_replicate_obs_noise.m: simulate noise sample
	replicates.
	* utils/stk_generate_samplepaths.m: Use the new function.

	Encapsulate Gaussian logpdf / logpdf_grad computations

	* misc/distrib/stk_distrib_logpdf.m: Compute the Gaussian logpdf,
	still assuming the good ol' struct representation.
	* misc/distrib/stk_distrib_logpdf_grad.m: Compute the gradient of
	the Gaussian logpdf.
	* param/estim/stk_param_relik.m: Simplify the code using the two
	new internal functions.

2018-07-13  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_isnoisy.m: Clarify the case of noise model objects

	* core/stk_isnoisy.m: Clarify the case of noise model objects.

	stk_sampling_nestedlhs.m: Minor doc fix

	* sampling/stk_sampling_nestedlhs.m: Minor doc fix.

2018-07-12  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_estim.m (provide_param0_value): Fix the case of parameter objects

	* param/estim/stk_param_estim.m: Fix the case where param0 is a
	parameter object instead of a vector of numeric parameter values.
