@@ -47,40 +47,64 @@
 function param = stk_set_optimizable_parameters (param, value, select)
 
 % This function will catch all calls to stk_set_optimizable_parameters for which
-% neither param nor value is an object of a "parameter class" (more precisely,
-% a class that implements stk_set_optimizable_parameters)
+% arg1 is not an object of a class that implements stk_set_optimizable_parameters.
 
-try
+if isstruct (param)
     
-    if nargin < 3
+    if isfield (param, 'K') && isfield (param, 'P')
         
-        % If param is numeric, the following syntax preserves its size and type
-        param(:) = value;
+        % A very special case: parameter structure of a discrete covariance model
+        if ~ (isempty (value) && (nargin < 3 || isempty (select)))
+            stk_error (['Discrete covariance structures have no ' ...
+                'optimizable parameters.'], 'InvalidArgument');
+        end
         
     else
         
-        % Save initial size
-        s = size (param);
-        
-        % If param is numeric, the following syntax preserves its type
-        % but might change its size, depending on what select actually is
-        param(select) = value;
-        
-        if ~ isequal (size (param), s)
-            stk_error ('Invalid select argument.', 'InvalidArgument');
+        % Assuming that param is a model structure:
+        if nargin < 3
+            param = stk_set_optimizable_model_parameters (param, value);
+        else
+            param = stk_set_optimizable_model_parameters (param, value, select);
         end
         
     end
     
-    % Note: if param is an object, what we just did is actually a call to
-    % subsasgn in disguise.  This way of supporting parameter objects has been
-    % introduced in STK 2.0.0 as an "experimental" feature.  It is now
-    % deprecated; overload stk_set_optimizable_parameters () instead.
+else
     
-catch
-    
-    stk_error (['stk_set_optimizable_parameters is not implemented for ' ...
-        'objects of class ', class(param), '.'], 'TypeMismatch');
+    try
+        
+        if nargin < 3
+            
+            % If param is numeric, the following syntax preserves its size and type
+            param(:) = value;
+            
+        else
+            
+            % Save initial size
+            s = size (param);
+            
+            % If param is numeric, the following syntax preserves its type
+            % but might change its size, depending on what select actually is
+            param(select) = value;
+            
+            if ~ isequal (size (param), s)
+                stk_error ('Invalid select argument.', 'InvalidArgument');
+            end
+            
+        end
+        
+        % Note: if param is an object, what we just did is actually a call to
+        % subsasgn in disguise.  This way of supporting parameter objects has been
+        % introduced in STK 2.0.0 as an "experimental" feature.  It is now
+        % deprecated; overload stk_set_optimizable_parameters () instead.
+        
+    catch
+        
+        stk_error (['stk_set_optimizable_parameters is not implemented for ' ...
+            'objects of class ', class(param), '.'], 'TypeMismatch');
+        
+    end % if
     
 end % if
 
